syntax = "proto3";

package course;

option go_package = "/course";

// Service definition for CourseService
service CourseService {
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse);
  rpc GetAllCourses(GetAllCoursesRequest) returns (GetAllCoursesResponse);
  rpc GetCourse(GetCourseRequest) returns (GetCourseResponse);
  rpc UpdateCourse(UpdateCourseRequest) returns (UpdateCourseResponse);
  rpc DeleteCourse(DeleteCourseRequest) returns (DeleteCourseResponse);
}

// The Course message representing a course object
message Course {
  string title = 1;
  string description = 2;
  string creator = 3;
  int32 likes = 4;
  repeated string students = 5;
  repeated string topics = 6;
  repeated Module modules = 7;
  string updated_at = 8;
  string created_at = 9;
}

// The Module message representing a module within a course
message Module {
  int32 id = 1;
  string title = 2;
  repeated Task tasks = 3;
}

// The Task message representing a task within a module
message Task {
  int32 id = 1;
  string task = 2;
  string type = 3;
  int32 xp = 4;
}

// Request message for creating a new course
message CreateCourseRequest {
  string title = 1;
  string description = 2;
  string creator = 3;
}

// Response message for creating a new course
message CreateCourseResponse {
  Course course = 1;
}

// Request message for retrieving a course by id
message GetCourseRequest {
  string title = 1;
}

// Response message for retrieving a course by id
message GetCourseResponse {
  Course course = 1;
}

// Request message for updating an existing course
message UpdateCourseRequest {
  string title = 1;
  string description = 2;
  string creator = 3;
  int32 likes = 4;
  repeated string students = 5;
  repeated string topics = 6;
  repeated Module modules = 7;
}

// Response message for updating an existing course
message UpdateCourseResponse {
  Course course = 1;
}

// Request message for deleting a course by id
message DeleteCourseRequest {
  string title = 1;
}

// Response message for deleting a course by id
message DeleteCourseResponse {
  bool success = 1;
}

// Request message for retrieving all courses
message GetAllCoursesRequest {}

// Response message for retrieving all courses
message GetAllCoursesResponse {
  repeated Course courses = 1;
}